refactor: update oscars (#6)